# jantama-ai

./: .eslintrc.cjs  .gitignore  .gitmodules  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
design/: Jantama AI - Design Exploration.html  app.jsx  scenarios.jsx  tile.jsx  tokens.css
docs/: PRD.md  SETUP.md
python/: README.md  pyproject.toml
python/common/: __init__.py  jsonlines_io.py  logging_setup.py
python/mortal/: __init__.py  action_formatter.py  main.py  mortal_engine.py  snapshot_to_mjai.py
python/recognition/: __init__.py  board_recognizer.py  main.py  melds_recognizer.py  ocr_recognizer.py  river_recognizer.py  tile_recognizer.py  turn_recognizer.py  wind_recognizer.py
python/recognition/templates/: README.md
python/recognition/tools/: extract_template.py
python/tests/: test_action_formatter.py  test_board_recognizer.py  test_extract_template_cli.py  test_melds_recognizer.py  test_mortal_engine.py  test_mortal_vendor_import.py  test_river_recognizer.py  test_smoke.py  test_snapshot_to_mjai.py  test_template_preprocess.py  test_tile_recognizer.py  test_turn_recognizer.py
scripts/: gen-placeholder-icon.mjs  init-git.ps1
src/: App.test.tsx  App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: capture.rs  commands.rs  lib.rs  main.rs  monitor.rs  python_proc.rs  types.rs
src/components/: ActionPill.tsx  CandidateList.tsx  ConfBar.tsx  ContextBar.test.tsx  ContextBar.tsx  DangerSafeBlock.tsx  ErrorBody.tsx  HandRow.tsx  HeroLayout.tsx  IdleBody.tsx  MonitorButton.tsx  MonitorPill.tsx  PrimaryGlyph.tsx  ReasonBlock.tsx  StatusBar.tsx  Tile.test.tsx  Tile.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx
src/hooks/: useInferenceEvents.ts  useNow.ts  useTauri.ts
src/lib/: actionLabels.ts  roiCalibration.test.ts  roiCalibration.ts  scenarios.ts  tauriCommands.ts
src/screens/: CalibrationScreen.test.tsx  CalibrationScreen.tsx  MainScreen.test.tsx  MainScreen.tsx  SettingsScreen.tsx
src/state/: appState.ts
src/types/: index.ts
