[project]
name = "jantama-ai-python"
version = "0.1.0"
description = "雀魂AIアシスタント Python サイドプロセス (recognition + mortal)"
authors = [{ name = "Akimasa" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pillow>=10.4",
    "pydantic>=2.7",
    # issue #12: 局名 / 点棒 / 巡目の数字・テキスト認識用。Tesseract 本体は
    # 別途インストール必須 (Windows は UB Mannheim ビルド推奨)。binary 不在時は
    # ocr_recognizer.py が graceful に degrade する。
    "pytesseract>=0.3",
]

[project.optional-dependencies]
# Mortal 推論で必要。ROCm 7.2.1 を使う場合は別途インデックス指定でインストール。
# 例: uv pip install --extra-index-url https://download.pytorch.org/whl/rocm7.2 torch
#
# 上流 Mortal (python/vendor/mortal) の environment.yml に記載された pip 依存を
# ここで一括管理する。libriichi は Mortal 本体側で Rust から build する必要があり
# pip からは取得できない (Phase D2 で対応)。
mortal = [
    "torch>=2.4; sys_platform != 'win32' or platform_machine != 'AMD64'",
    "toml>=0.10",
    "tqdm>=4.66",
    "tensorboard>=2.16",
]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[project.scripts]
jantama-recognition = "recognition.main:main"
jantama-mortal = "mortal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recognition", "mortal", "common"]

[tool.ruff]
line-length = 100
target-version = "py312"
# vendor/ は Equim-chan/Mortal の git submodule。本リポジトリ側で lint しない。
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
