[package]
name = "jantama-ai"
version = "0.1.0"
description = "雀魂AIアシスタント"
authors = ["Akimasa"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-default-run-field
default-run = "jantama-ai"

[lib]
name = "jantama_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
xcap = "0.0.14"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
base64 = "0.22"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
